--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,7 @@
         <maven-dependency-plugin.version>2.8</maven-dependency-plugin.version>
         <scalariform.version>0.2.2</scalariform.version>
         <!-- /plugins -->
+        <ubirchKafka.version>1.2.3-SNAPSHOT</ubirchKafka.version>
 
         <!-- /versions -->
 
@@ -266,7 +267,11 @@
         <!-- /Joda -->
 
         <!-- Ubirch -->
-
+        <dependency>
+            <groupId>com.ubirch</groupId>
+            <artifactId>event-log-kafka</artifactId>
+            <version>${ubirchKafka.version}</version>
+        </dependency>
         <!-- /Ubirch -->
 
     </dependencies>
