Added test set-up for core

--- a/discovery-service-kafka-api/src/main/resources/application-docker.conf
+++ b/discovery-service-kafka-api/src/main/resources/application-docker.conf
@@ -4,7 +4,7 @@ core {
 
   connector {
 
-    hosts = ${DISC_ENV_CORE_ADDR}
+    hosts = ${DISC_ENV_CORE_HOSTS}
     port = ${DISC_ENV_CORE_PORT}
 
   }
