UP-647: added more tests for kafka, fixed testbench UP-646: started README.md for global project

--- a/helm-charts/discovery-service-kafka/values.dev.yaml
+++ b/helm-charts/discovery-service-kafka/values.dev.yaml
@@ -24,7 +24,7 @@ discoveryservice:
   prometheus:
     port: 4321
   core:
-    hosts: "[janusgraph.core-dev]"
+    hosts: "janusgraph.core-dev"
     port: 8182
 
 
