Changed topic error from com.ubirch.eventlog.discovery-error to com.ubirch.eventlog.discovery.error Added log when message is finished being processed

--- a/discovery-service-kafka-api/src/main/resources/application.base.conf
+++ b/discovery-service-kafka-api/src/main/resources/application.base.conf
@@ -26,7 +26,7 @@ kafkaApi {
     //If empty, a group id will be created.
     groupId = "my group id"
     // gracefulTimeout = 2 //In Seconds
-    errorTopic = "com.ubirch.eventlog.discovery-error"
+    errorTopic = "com.ubirch.eventlog.discovery.error"
     gracefulTimeout = 2
     maxPoolRecords = 500
   }
@@ -34,7 +34,7 @@ kafkaApi {
   kafkaProducer {
     //Comma-separeted values of IP/Hostname and ports
     bootstrapServers = "localhost:9092"
-    errorTopic = "com.ubirch.eventlog.discovery-error"
+    errorTopic = "com.ubirch.eventlog.discovery.error"
     topic = "com.ubirch.eventlog.discovery, test"
     gracefulTimeout = 2
 
