--- a/helm-charts/discovery-service-kafka/values.dev.yaml
+++ b/helm-charts/discovery-service-kafka/values.dev.yaml
@@ -14,13 +14,13 @@ discoveryservice:
     bootstrapServers: "kafka.core-dev:9092"
     timeout: 2
     consumer:
-      errorTopic: "com.ubirch.eventlog.discovery-error"
+      errorTopic: "com.ubirch.eventlog.discovery.error"
       topics: "com.ubirch.eventlog.discovery"
       group: "discovery-kafka"
       poolRecords: 500
     producer:
       topics: "com.ubirch.eventlog.discovery"
-      errorTopic: "com.ubirch.eventlog.discovery-error"
+      errorTopic: "com.ubirch.eventlog.discovery.error"
   prometheus:
     port: 4321
   core:
