Refactor: renamed discovery-service-kafka-api to discovery-service-kafka and discovery-service-rest-api to discovery-service-rest

--- a/pom.xml
+++ b/pom.xml
@@ -336,9 +336,9 @@
 
     <!-- sub modules -->
     <modules>
-        <module>discovery-service-kafka-api</module>
+        <module>discovery-service-kafka</module>
         <module>discovery-service-core</module>
-        <module>discovery-service-rest-api</module>
+        <module>discovery-service-rest</module>
         <module>discovery-service-docker-jg</module>
     </modules>
 
