UP-644: started making gremlin calls asynchronous Modified gremlin connector parameter: increased connection timeout and reduced time to reconnect Added cache when executing huge number of queries Optimisations: reduced time to query an edge by a factor of 100 on some specific scenarios

--- a/discovery-service-kafka/src/main/resources/application-docker.conf
+++ b/discovery-service-kafka/src/main/resources/application-docker.conf
@@ -7,6 +7,11 @@ core {
     hosts = ${DISC_ENV_CORE_HOSTS}
     port = ${DISC_ENV_CORE_PORT}
 
+    connectionPool {
+      reconnectInterval = ${DISC_ENV_CORE_COONPOOL_RECONINTERVAL}
+      maxWaitForConnection = ${DISC_ENV_CORE_COONPOOL_MAXWAITCONNECTION}
+    }
+
   }
 }
 
