--- a/helm-charts/discovery-service-kafka/values.dev.yaml
+++ b/helm-charts/discovery-service-kafka/values.dev.yaml
@@ -26,6 +26,9 @@ discoveryservice:
   core:
     hosts: "janusgraph.core-dev"
     port: 8182
+    connectionPool:
+      reconnectInterval: 500
+      maxWaitForConnection: 6000
 
 
 redis:
