--- a/discovery-service-core/src/main/resources/application.base.conf
+++ b/discovery-service-core/src/main/resources/application.base.conf
@@ -5,13 +5,16 @@ core {
     hosts = 127.0.0.1
     port = 8182
 
+    connectionPool {
+      reconnectInterval = 500
+      maxWaitForConnection = 6000
+    }
     serializer {
       className = org.apache.tinkerpop.gremlin.driver.ser.GryoMessageSerializerV3d0
       config {
-          ioRegistries = [org.janusgraph.graphdb.tinkerpop.JanusGraphIoRegistry]
-        }
+        ioRegistries = [org.janusgraph.graphdb.tinkerpop.JanusGraphIoRegistry]
       }
-
+    }
 
   }
 }
