--- a/discovery-service-kafka/src/main/resources/application.base.conf
+++ b/discovery-service-kafka/src/main/resources/application.base.conf
@@ -5,6 +5,11 @@ core {
     hosts = 127.0.0.1
     port = 8182
 
+    connectionPool {
+      reconnectInterval = 500
+      maxWaitForConnection = 6000
+    }
+
     serializer {
       className = org.apache.tinkerpop.gremlin.driver.ser.GryoMessageSerializerV3d0
       config {
