--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,7 @@
         <!-- versions -->
 
         <scala.logging.version>3.9.0</scala.logging.version>
+        <typesafe.config>1.3.4</typesafe.config>
         <slf4j.api.version>1.7.15</slf4j.api.version>
         <logback-classic.version>1.2.3</logback-classic.version>
         <log4j-over-slf4j.version>1.7.25</log4j-over-slf4j.version>
@@ -90,6 +91,7 @@
         <javaxServlet.version>3.1.0</javaxServlet.version>
 
         <json4s.version>3.5.2</json4s.version>
+        <embedded-kafka>2.3.0</embedded-kafka>
 
         <gremlinScala.version>3.4.1.4</gremlinScala.version>
         <janusGraph.version>0.3.1</janusGraph.version>
@@ -157,6 +159,12 @@
             <groupId>com.typesafe.scala-logging</groupId>
             <artifactId>scala-logging_${scala.compat.version}</artifactId>
             <version>${scala.logging.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.typesafe</groupId>
+            <artifactId>config</artifactId>
+            <version>${typesafe.config}</version>
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/net.logstash.logback/logstash-logback-encoder -->
