added asynch stuff

--- a/discovery-service-kafka/src/main/resources/application.base.conf
+++ b/discovery-service-kafka/src/main/resources/application.base.conf
@@ -16,8 +16,6 @@ core {
         ioRegistries = [org.janusgraph.graphdb.tinkerpop.JanusGraphIoRegistry]
       }
     }
-
-
   }
 }
 
@@ -43,6 +41,10 @@ kafkaApi {
     topic = "com.ubirch.eventlog.discovery, test"
     gracefulTimeout = 2
 
+  }
+
+  gremlinConf {
+    asynchronousBatchSize = 16
   }
 
   metrics {
