--- a/discovery-service-kafka/src/main/resources/application-docker.conf
+++ b/discovery-service-kafka/src/main/resources/application-docker.conf
@@ -41,6 +41,10 @@ kafkaApi {
 
   }
 
+  gremlinConf {
+    asynchronousBatchSize = ${DISC_ENV_KAFKA_GREM_ASYNC}
+  }
+
   metrics {
     prometheus {
       port = ${DISC_ENV_KAFKA_PROMETHEUS}
