Updated dependencies Code cleanup Logging level Modified prometheus counters

--- a/helm-charts/discovery-service-kafka/templates/deployment.yaml
+++ b/helm-charts/discovery-service-kafka/templates/deployment.yaml
@@ -21,7 +21,7 @@ spec:
         release: {{ .Release.Name }}
     spec:
       containers:
-        - name: responder-svc
+          - name: discovery-srv
           image: "ubirch/discovery-service-kafka:{{ .Values.image.tag | default "latest" }}"
           imagePullPolicy: Always
           ports:
