Uptaded getVertices Uptaded prometheus support

--- a/discovery-service-kafka/src/main/resources/application-docker.conf
+++ b/discovery-service-kafka/src/main/resources/application-docker.conf
@@ -54,6 +54,7 @@ kafkaApi {
   metrics {
     prometheus {
       port = ${DISC_ENV_KAFKA_PROMETHEUS}
+      namespace = ${DISC_ENV_KAFKA_PROMETHEUS_NAMESPACE}
     }
   }
 
