--- a/helm-charts/discovery-service-kafka/values.dev.yaml
+++ b/helm-charts/discovery-service-kafka/values.dev.yaml
@@ -25,6 +25,7 @@ discoveryservice:
       asynchronousBatchSize: 8
   prometheus:
     port: 4321
+    namespace: "ubirch_discovery_service"
   core:
     hosts: "janusgraph.core-dev"
     port: 8182
