--- a/helm-charts/discovery-service-kafka/templates/deployment.yaml
+++ b/helm-charts/discovery-service-kafka/templates/deployment.yaml
@@ -77,6 +77,9 @@ spec:
               value: {{ .Values.discoveryservice.core.connectionPool.reconnectInterval | quote }}
             - name: DISC_ENV_CORE_COONPOOL_MAXWAITCONNECTION
               value: {{ .Values.discoveryservice.core.connectionPool.maxWaitForConnection | quote }}
+            - name: DISC_ENV_KAFKA_PROMETHEUS_NAMESPACE
+              value: {{ .Values.discoveryservice.prometheus.namespace | quote }}
+
       dnsPolicy: ClusterFirst
       restartPolicy: Always
       terminationGracePeriodSeconds: 30
