Correct prometheus namespace name on demo

--- a/helm-charts/discovery-service-kafka/values.demo.yaml
+++ b/helm-charts/discovery-service-kafka/values.demo.yaml
@@ -34,7 +34,7 @@ discoveryservice:
       maxWaitForConnection: 6000
 
 prometheus:
-  namespace: prometheus
+  namespace: prometheus-demo
 
 redis:
   masterURL: "redis-stable-master.core-demo.svc.cluster.local:6379"
