--- a/discovery-rest-service/pom.xml
+++ b/discovery-rest-service/pom.xml
@@ -6,12 +6,12 @@
     <parent>
         <groupId>com.ubirch.discovery</groupId>
         <artifactId>discovery-service</artifactId>
-        <version>0.1.0</version>
+        <version>0.1.1</version>
     </parent>
 
     <!-- basic info -->
     <artifactId>discovery-rest-service</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>0.1.1</version>
     <name>${project.artifactId}</name>
     <description>REST API of the discovery service with swagger support</description>
     <inceptionYear>2019</inceptionYear>
@@ -20,8 +20,8 @@
         <!-- Core -->
         <dependency>
             <groupId>com.ubirch.discovery</groupId>
-            <artifactId>discovery-service-core</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <artifactId>discovery-core-service</artifactId>
+            <version>0.1.1</version>
         </dependency>
 
         <!-- Jetty servlet -->
