--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
         <!-- plugins -->
         <maven-dependency-plugin.version>2.8</maven-dependency-plugin.version>
         <scalariform.version>0.2.2</scalariform.version>
+        <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
         <!-- /plugins -->
         <ubirchKafka.version>1.2.3-SNAPSHOT</ubirchKafka.version>
 
@@ -327,6 +328,18 @@
                     </execution>
                 </executions>
             </plugin>
+
+
+            <!-- for mvn deploy to work, disable the default deploy plugin -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>${maven-deploy-plugin.version}</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
+
         </plugins>
     </build>
 
