--- a/helm-charts/kafka-discovery-service/templates/deployment.yaml
+++ b/helm-charts/kafka-discovery-service/templates/deployment.yaml
@@ -28,12 +28,10 @@ spec:
             - containerPort: 8080
             - containerPort: 9010
           resources:
-            requests:
-              cpu: 0.5
-              memory: 0.3Gi
             limits:
-              cpu: 1
-              memory: 0.5Gi
+              memory: 1000Mi
+            requests:
+              memory: 740Mi
           readinessProbe:
             tcpSocket:
               port: 9010
