--- a/discovery-kafka-service/src/main/resources/application-docker.conf
+++ b/discovery-kafka-service/src/main/resources/application-docker.conf
@@ -34,11 +34,13 @@ kafkaApi {
     errorTopic = ${DISC_ENV_KAFKA_CONS_ERRORTOPIC}
     gracefulTimeout = ${DISC_ENV_KAFKA_CONS_TIMEOUT}
     maxPoolRecords = ${DISC_ENV_KAFKA_CONS_POOLREC}
-
+    reconnectBackoffMsConfig = ${DISC_ENV_KAFKA_CONS_RECONNECT_BACKOFF_MS_CONFIG}
+    reconnectBackoffMaxMsConfig = ${DISC_ENV_KAFKA_CONS_RECONNECT_BACKOFF_MAX_MS_CONFIG}
 
   }
 
   kafkaProducer {
+    lingerMS = ${DISC_ENV_KAFKA_PROD_LINGER_MS}
     //Comma-separeted values of IP/Hostname and ports
     bootstrapServers = ${DISC_ENV_KAFKA_PROD_BOOTSTRAP}
     errorTopic = ${DISC_ENV_KAFKA_PROD_ERRORTOPIC}
