--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,7 @@
         <scalariform.version>0.2.2</scalariform.version>
         <maven-deploy-plugin.version>2.8.2</maven-deploy-plugin.version>
         <!-- /plugins -->
-        <ubirchKafka.version>1.2.8-SNAPSHOT</ubirchKafka.version>
+        <ubirch-kafka-express.version>1.2.10-SNAPSHOT</ubirch-kafka-express.version>
 
         <!-- /versions -->
 
@@ -266,8 +266,8 @@
         <!-- Ubirch -->
         <dependency>
             <groupId>com.ubirch</groupId>
-            <artifactId>event-log-kafka</artifactId>
-            <version>${ubirchKafka.version}</version>
+            <artifactId>ubirch-kafka-express</artifactId>
+            <version>${ubirch-kafka-express.version}</version>
         </dependency>
         <!-- /Ubirch -->
 
