Adding explicit setting of driver settings

--- a/discovery-core-service/src/main/resources/application.base.conf
+++ b/discovery-core-service/src/main/resources/application.base.conf
@@ -5,7 +5,11 @@ core {
     hosts = 0.0.0.0
     port = 8182
 
+    nioPoolSize = 3 //default is available processors
+    workerPoolSize = 6 //default available processors * 2
+
     connectionPool {
+      maxSize = 8
       reconnectInterval = 500
       maxWaitForConnection = 6000
     }
