--- a/discovery-kafka-service/src/main/resources/application-docker.conf
+++ b/discovery-kafka-service/src/main/resources/application-docker.conf
@@ -7,7 +7,14 @@ core {
     hosts = ${DISC_ENV_CORE_HOSTS}
     port = ${DISC_ENV_CORE_PORT}
 
+    //use -1 to use default
+    nioPoolSize = ${DISC_ENV_CORE_NIO_POOL_SIZE} //default is available processors
+    //use -1 to use default
+    workerPoolSize = ${DISC_ENV_CORE_WORKER_POOL_SIZE} //default available processors * 2
+
     connectionPool {
+      //use -1 to use default
+      maxSize = ${DISC_ENV_CORE_COONPOOL_MAX_SIZE}
       reconnectInterval = ${DISC_ENV_CORE_COONPOOL_RECONINTERVAL}
       maxWaitForConnection = ${DISC_ENV_CORE_COONPOOL_MAXWAITCONNECTION}
     }
