--- a/discovery-kafka-service/src/main/resources/application.base.conf
+++ b/discovery-kafka-service/src/main/resources/application.base.conf
@@ -5,7 +5,12 @@ core {
     hosts = "127.0.0.1"
     port = 8182
 
+    nioPoolSize = 3 //default is available processors
+    workerPoolSize = 6 //default available processors * 2
+
     connectionPool {
+      //use -1 to use default
+      maxSize = 8
       reconnectInterval = 500
       maxWaitForConnection = 6000
     }
