Adding min size and fixing wrong assignment

--- a/discovery-core-service/src/main/resources/application.base.conf
+++ b/discovery-core-service/src/main/resources/application.base.conf
@@ -9,6 +9,7 @@ core {
     workerPoolSize = 6 //default available processors * 2
 
     connectionPool {
+      minSize = 4
       maxSize = 8
       reconnectInterval = 500
       maxWaitForConnection = 6000
