--- a/discovery-kafka-service/src/main/resources/application-docker.conf
+++ b/discovery-kafka-service/src/main/resources/application-docker.conf
@@ -15,6 +15,7 @@ core {
     connectionPool {
       //use -1 to use default
       maxSize = ${DISC_ENV_CORE_COONPOOL_MAX_SIZE}
+      minSize = ${DISC_ENV_CORE_COONPOOL_MIN_SIZE}
       reconnectInterval = ${DISC_ENV_CORE_COONPOOL_RECONINTERVAL}
       maxWaitForConnection = ${DISC_ENV_CORE_COONPOOL_MAXWAITCONNECTION}
     }
