--- a/discovery-kafka-service/src/main/resources/application.base.conf
+++ b/discovery-kafka-service/src/main/resources/application.base.conf
@@ -10,6 +10,7 @@ core {
 
     connectionPool {
       //use -1 to use default
+      minSize = 4
       maxSize = 8
       reconnectInterval = 500
       maxWaitForConnection = 6000
