executor maxParallelConnection can now be configured through the helm charts

--- a/discovery-kafka-service/src/main/resources/application-docker.conf
+++ b/discovery-kafka-service/src/main/resources/application-docker.conf
@@ -58,7 +58,7 @@ kafkaApi {
   }
 
   gremlinConf {
-    asynchronousBatchSize = ${DISC_ENV_KAFKA_GREM_ASYNC}
+    maxParallelConnection = ${DISC_ENV_KAFKA_GREM_ASYNC}
   }
 
   metrics {
