adding explicit threads count

--- a/discovery-kafka-service/src/main/resources/application-docker.conf
+++ b/discovery-kafka-service/src/main/resources/application-docker.conf
@@ -2,6 +2,8 @@ include "application.base.conf"
 
 core {
 
+  threads = ${DISC_ENV_CORE_THREADS}
+
   connector {
 
     hosts = ${DISC_ENV_CORE_HOSTS}
