added health checks

--- a/discovery-kafka-service/src/main/resources/application-docker.conf
+++ b/discovery-kafka-service/src/main/resources/application-docker.conf
@@ -72,4 +72,9 @@ kafkaApi {
     }
   }
 
+  healthcheck {
+    enabled = ${DISC_ENV_KAFKA_HEALTHCHECK_ENABLED}
+    port = ${DISC_ENV_KAFKA_HEALTHCHECK_PORT}
+  }
+
 }
