--- a/pom.xml
+++ b/pom.xml
@@ -283,6 +283,12 @@
             <version>${ubirch-kafka-express.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.ubirch.niomon</groupId>
+            <artifactId>health-check</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
 <!--        <dependency>-->
 <!--            <groupId>com.ubirch</groupId>-->
 <!--            <artifactId>ubirch-janusgraph-express</artifactId>-->
