Added redis to DS

--- a/discovery-kafka-service/src/main/resources/application-docker.conf
+++ b/discovery-kafka-service/src/main/resources/application-docker.conf
@@ -78,3 +78,9 @@ kafkaApi {
   }
 
 }
+
+redis {
+  address = ${DISC_ENV_REDIS_URL}
+  port = ${DISC_ENV_REDIS_PORT}
+  password = ${DISC_ENV_REDIS_PWD}
+}
