--- a/pom.xml
+++ b/pom.xml
@@ -296,6 +296,15 @@
 <!--        </dependency>-->
         <!-- /Ubirch -->
 
+        <!--Cache -->
+        <!-- https://mvnrepository.com/artifact/net.debasishg/redisclient -->
+        <dependency>
+            <groupId>net.debasishg</groupId>
+            <artifactId>redisclient_${scala.compat.version}</artifactId>
+            <version>3.30</version>
+        </dependency>
+
+
     </dependencies>
 
 
