--- a/discovery-kafka-service/src/main/resources/application.base.conf
+++ b/discovery-kafka-service/src/main/resources/application.base.conf
@@ -80,3 +80,25 @@ redis {
   port = 6379
   password = "foobared"
 }
+
+janus {
+  properties = """
+  gremlin.graph=org.janusgraph.core.JanusGraphFactory
+
+  storage.backend=cql
+
+  storage.hostname=127.0.0.1
+
+  cache.db-cache = true
+
+  cache.db-cache-clean-wait = 20
+
+  cache.db-cache-time = 180000
+
+  cache.db-cache-size = 0.25
+
+  index.search.backend=elasticsearch
+
+  index.search.hostname=127.0.0.1"""
+}
+
