Added missing maven dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -245,6 +245,20 @@
             <version>${janusGraph.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.janusgraph/janusgraph-cql -->
+        <dependency>
+            <groupId>org.janusgraph</groupId>
+            <artifactId>janusgraph-cql</artifactId>
+            <version>${janusGraph.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.janusgraph/janusgraph-es -->
+        <dependency>
+            <groupId>org.janusgraph</groupId>
+            <artifactId>janusgraph-es</artifactId>
+            <version>${janusGraph.version}</version>
+        </dependency>
+
         <!-- Janusgraph libraries for testing -->
         <dependency>
             <groupId>org.janusgraph</groupId>
