Added batch size as an helm value

--- a/discovery-kafka-service/src/main/resources/application-docker.conf
+++ b/discovery-kafka-service/src/main/resources/application-docker.conf
@@ -65,6 +65,8 @@ kafkaApi {
     maxParallelConnection = ${DISC_ENV_KAFKA_GREM_ASYNC}
   }
 
+  batchSize = ${DISC_ENV_KAFKA_BATCH_SIZE}
+
   metrics {
     prometheus {
       port = ${DISC_ENV_KAFKA_PROMETHEUS}
