--- a/pom.xml
+++ b/pom.xml
@@ -306,6 +306,13 @@
             <version>${ubirch-kafka-express.version}</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.ubirch/ubirch-kafka-envelope -->
+        <dependency>
+            <groupId>com.ubirch</groupId>
+            <artifactId>ubirch-kafka-envelope</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+
         <dependency>
             <groupId>com.ubirch.niomon</groupId>
             <artifactId>health-check</artifactId>
