--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,8 @@
         <jodaConverter.version>2.1.1</jodaConverter.version>
 
         <guice.version>4.1.0</guice.version>
+        <scalatra.version>2.6.5</scalatra.version>
+
 
         <embedded-kafka>2.3.0</embedded-kafka>
 
@@ -318,6 +320,14 @@
             <artifactId>health-check</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.scalatra</groupId>
+            <artifactId>scalatra_2.12</artifactId>
+            <version>${scalatra.version}</version>
+        </dependency>
+
 
         <dependency>
             <groupId>com.google.inject</groupId>
