Storing edges differently

--- a/src/test/resources/embedded-jg/custom-janusgraph-properties.properties
+++ b/src/test/resources/embedded-jg/custom-janusgraph-properties.properties
@@ -20,6 +20,6 @@ cache.db-cache=false
 
 query.batch=true
 query.fast-property=true
-storage.batch-loading=true
+storage.batch-loading=false
 storage.cql.batch-statement-size=150
 ids.block-size=10000000
