--- a/src/main/resources/application-docker.conf
+++ b/src/main/resources/application-docker.conf
@@ -76,6 +76,17 @@ kafkaApi {
 
 }
 
+redis {
+  mainHost = ${DISC_ENV_REDIS_MAIN_HOST}
+  replicatedHost = ${DISC_ENV_REDIS_REPLICATED_HOST}
+  port = ${DISC_ENV_REDIS_PORT}
+  password = ${DISC_ENV_REDIS_PW}
+  useReplicated = ${DISC_ENV_REDIS_USEREPLICATED}
+  cacheName = ${DISC_ENV_REDIS_NAME}
+  ttl = ${DISC_ENV_REDIS_TTL}
+  host = ${DISC_ENV_REDIS_HOST}
+}
+
 healthcheck {
   enabled = ${DISC_ENV_KAFKA_HEALTHCHECK_ENABLED}
   port = ${DISC_ENV_KAFKA_HEALTHCHECK_PORT}
