--- a/src/test/resources/application.test.conf
+++ b/src/test/resources/application.test.conf
@@ -58,3 +58,14 @@ kafkaApi {
   }
 
 }
+
+
+redis {
+  host = "localhost"
+  port = 6379
+  password = ""
+  useReplicated = false
+  cacheName = "hashes_payload"
+  ttl = 30
+  mainHost = "localhost"
+}
