--- a/src/main/resources/application.base.conf
+++ b/src/main/resources/application.base.conf
@@ -71,6 +71,16 @@ kafkaApi {
 
 }
 
+redis {
+  host = "localhost"
+  port = 6379
+  password = ""
+  useReplicated = false
+  cacheName = "hashes_payload"
+  ttl = 30
+  mainHost = "localhost"
+}
+
 healthcheck {
   enabled = true
   port = 8888
