--- a/pom.xml
+++ b/pom.xml
@@ -72,13 +72,14 @@
 
         <scala.version>2.12.8</scala.version>
         <scala.compat.version>2.12</scala.compat.version>
-
         <scalatest.version>2.6.5</scalatest.version>
+
+        <scalatra.version>2.6.5</scalatra.version>
         <scalatra.version>2.6.5</scalatra.version>
         <scalactic.version>3.0.5</scalactic.version>
         <scalatraSwagger.version>2.6.5</scalatraSwagger.version>
-
         <javaxServlet.version>3.1.0</javaxServlet.version>
+        <jetty.version>9.4.39.v20210325</jetty.version>
 
         <json4s.version>3.5.2</json4s.version>
 
@@ -93,12 +94,8 @@
         <jodaConverter.version>2.1.1</jodaConverter.version>
 
         <guice.version>4.1.0</guice.version>
-        <scalatra.version>2.6.5</scalatra.version>
-
 
         <embedded-kafka>2.3.0</embedded-kafka>
-
-
 
         <!-- plugins -->
         <maven-dependency-plugin.version>2.8</maven-dependency-plugin.version>
@@ -208,16 +205,43 @@
         </dependency>
 
         <!-- /Scalatra -->
-
         <!-- Javax servlet -->
-
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
             <version>${javaxServlet.version}</version>
         </dependency>
 
-        <!-- /Javax servlet -->
+        <!-- Jetty servlet -->
+        <!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-server -->
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-server</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-servlet</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-webapp -->
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-webapp</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.eclipse.jetty/jetty-servlets -->
+        <dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-servlets</artifactId>
+            <version>${jetty.version}</version>
+        </dependency>
+
+        <!-- Jetty servlet -->
+
 
         <!-- Json4s -->
 
