UC-1848 Change health check query to remove unnecessary warning logs

--- a/src/main/resources/application-docker.conf
+++ b/src/main/resources/application-docker.conf
@@ -5,6 +5,7 @@ flush = ${DISC_ENV_FLUSH}
 core {
 
   threads = ${DISC_ENV_CORE_THREADS}
+  healthcheckHash = ${DISC_JG_HEALTHCHECK_HASH_VALUE}
 
   connector {
 
