UC-1848 Add comments

--- a/src/main/resources/application-docker.conf
+++ b/src/main/resources/application-docker.conf
@@ -5,7 +5,8 @@ flush = ${DISC_ENV_FLUSH}
 core {
 
   threads = ${DISC_ENV_CORE_THREADS}
-  healthcheckHash = ${DISC_JG_HEALTHCHECK_HASH_VALUE}
+  // An existing hash to get when we query janusgraph to check status
+  healthCheckHash = ${DISC_JG_HEALTH_CHECK_HASH_VALUE}
 
   connector {
 
