--- a/src/main/resources/application.base.conf
+++ b/src/main/resources/application.base.conf
@@ -3,7 +3,8 @@ flush = false
 core {
 
   threads = 3
-  healthcheckHash = "1234"
+  // An existing hash to get when we query janusgraph to check status
+  healthCheckHash = "1234"
 
   connector {
 
